# alternate-tonic-client

./: .gitignore  Cargo.toml
src/: channel.rs  connector.rs  dns.rs  lib.rs  stream.rs  tcp.rs  tls.rs  util.rs
src/channel/: mod.rs  pooled.rs  singleton.rs
