[package]
name = "alternate-tonic-client"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
http = "1.4.0"
tower = { version = "0.5.2", features = ["util"] }
hyper = "1.8.1"
hyper-util = { version = "0.1.19", optional = true }
tokio = { version = "1.48.0", features = ["time"] }
tonic = { version = "0.14.2", default-features = false }

tokio-vsock = { version = "0.7.2", optional = true }

[dev-dependencies]
prost = "0.14.1"
tonic-prost = "0.14.2"
tokio = { version = "1.48.0", features = ["macros"] }
alternate-tonic-client = { path = ".", features = [
    "unix-transport",
    "vsock-transport",
    "custom-transport",
    "singleton-channel",
    "pooled-channel",
] }

[features]
default = []
_transport = []
unix-transport = ["_transport", "tokio/net", "hyper-util/tokio"]
vsock-transport = ["_transport", "dep:tokio-vsock", "hyper-util/tokio"]
custom-transport = ["_transport", "hyper-util/tokio"]
_channel = []
singleton-channel = [
    "_channel",
    "tower/reconnect",
    "tower/buffer",
    "tower/timeout",
    "hyper/client",
    "hyper/http2",
    "hyper-util/tokio",
    "tokio/rt",
]
pooled-channel = [
    "_channel",
    "hyper-util/client",
    "hyper-util/client-legacy",
    "hyper-util/http2",
    "hyper-util/tokio",
]
