[package]
name = "alternate-tonic-client"
version = "0.1.3"
edition = "2024"
description = "An alternative gRPC client stack meant to be a replacement for tonic's built-in Channel."
license = "MIT"
keywords = ["grpc", "tonic", "client", "channel", "transport"]
categories = ["network-programming", "web-programming"]
repository = "https://github.com/kanpov/alternate-tonic-client"
exclude = [".gitignore", ".rustfmt.toml"]
rust-version = "1.85.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
http = "1.4.0"
tower = { version = "0.5.2", features = ["util"] }
hyper = "1.8.1"
hyper-util = { version = "0.1.19", features = ["tokio"] }
tokio = { version = "1.48.0", features = ["time"] }
tonic = { version = "0.14.2", default-features = false }

rustls = { version = "0.23.35", optional = true, default-features = false, features = [
    "prefer-post-quantum",
    "std",
] }
hyper-rustls = { version = "0.27.7", optional = true, default-features = false, features = [
    "http2",
] }
tokio-vsock = { version = "0.7.2", optional = true }

[dev-dependencies]
prost = "0.14.1"
tonic-prost = "0.14.2"
tokio = { version = "1.48.0", features = ["macros"] }
alternate-tonic-client = { path = ".", features = [
    "dns-tcp-transport",
    "dns-tcp-tls-transport",
    "unix-transport",
    "vsock-transport",
    "custom-transport",
    "singleton-channel",
    "pooled-channel",
    "firecracker-handshake",
] }
rustls = { version = "0.23.35", features = ["aws-lc-rs"] }
webpki-roots = "1.0.4"

[features]
default = []
__transport = []
dns-tcp-transport = [
    "__transport",
    "hyper-util/client",
    "hyper-util/client-legacy",
    "hyper-util/tokio",
]
dns-tcp-tls-transport = [
    "__transport",
    "dep:rustls",
    "dep:hyper-rustls",
    "hyper-util/client",
    "hyper-util/client-legacy",
    "hyper-util/tokio",
]
unix-transport = ["__transport", "tokio/net", "hyper-util/tokio"]
vsock-transport = ["__transport", "dep:tokio-vsock", "hyper-util/tokio"]
custom-transport = ["__transport", "hyper-util/tokio"]
__channel = []
singleton-channel = [
    "__channel",
    "tower/reconnect",
    "tower/buffer",
    "tower/timeout",
    "hyper/client",
    "hyper/http2",
    "hyper-util/tokio",
    "tokio/rt",
]
pooled-channel = [
    "__channel",
    "hyper-util/client",
    "hyper-util/client-legacy",
    "hyper-util/http2",
    "hyper-util/tokio",
]
firecracker-handshake = ["tokio/io-util"]
